Simple logstash setup with http pipeline.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Serilog",
         "elasticsearch",
         "kibana",
-        "logstash"
+        "logstash",
+        "memlock",
+        "ulimits"
     ]
 }
