--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,19 @@ services:
       - 9200:9200
     networks:
       - elastic
-
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.4.2
+    container_name: logstash
+    volumes:
+      - ./pipeline/:/usr/share/logstash/pipeline/
+      - ./config/logstash.yml:/usr/share/logstash/config/logstash.yml
+    depends_on:
+      - es01
+    ports:
+      - 9600:9600
+      - 8123:8123
+    networks:
+      - elastic
 networks:
   # The docker network that will be shared between all the services.
   elastic:
